awx/awx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: awx-service
  namespace: awx
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8052
  selector:
    app.kubernetes.io/component: awx
    app.kubernetes.io/name: awx-web
